--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "dev": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
-  "build":  "tailwindcss -i ./src/input.css -o ./dist/output.css --minify && copy dist\\output.css public\\css\\output.css"
-},
+    "dev": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
+    "build": "tailwindcss -i ./src/input.css -o ./dist/output.css --minify && cpx dist/output.css public/css/"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "cpx": "^1.5.0",
     "tailwindcss": "^3.3.5"
   }
 }
